--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+:root {
   color: #222;
   background-color: #ffffff;
 
@@ -33,13 +33,6 @@ img:hover {
   filter: drop-shadow(0 0 2em #673ab8aa);
 }
 
-section {
-  margin-top: 5rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 1.5rem;
-}
-
 .resource {
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
@@ -59,23 +52,11 @@ section {
   #app {
     margin: 2rem;
   }
-  section {
-    margin-top: 5rem;
-    grid-template-columns: 1fr;
-    row-gap: 1rem;
-  }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     color: #ccc;
     background-color: #1a1a1a;
-  }
-  .resource {
-    color: #ccc;
-    background-color: #161616;
-  }
-  .resource:hover {
-    border: 1px solid #bbb;
   }
 }
